force-app/main/default/objects/Vendor_Registration__c/Vendor_Registration__c.object-meta.xml
<CustomObject>
    <label>Vendor Registration</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Vendor Reg Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>