force-app/main/default/objects/Vendor_Registration__c/fields/feedback__c.field-meta.xml
<CustomField>
    <fullName>feedback__c</fullName>
    <label>feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>