force-app/main/default/objects/Vendor_Registration__c/fields/Last_Year_TurnOver__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_TurnOver__c</fullName>
    <label>Last Year TurnOver</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>