force-app/main/default/objects/Vendor_Registration__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Work</fullName>
            </value>
            <value>
                <fullName>Time Management</fullName>
            </value>
            <value>
                <fullName>Positive Attitude</fullName>
            </value>
            <value>
                <fullName>Patience</fullName>
            </value>
            <value>
                <fullName>Smart work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>