force-app/main/default/objects/Vendor_Registration__c/listViews/Laptop_Vendor_Registration.listView-meta.xml
<ListView>
    <fullName>Laptop_Vendor_Registration</fullName>
    <filterScope>Queue</filterScope>
    <label>Laptop</label>
    <queue>Laptop</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>